kubernetes/Deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openwisp-dashboard
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openwisp-dashboard
    spec:
      restartPolicy: Always
      containers:
      - name: openwisp-dashboard
        image: openwisp/openwisp-dashboard:latest
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /opt/openwisp/static
            name: openwisp-dashboard-static
          - mountPath: /opt/openwisp/media
            name: openwisp-media-data
          - mountPath: /opt/openwisp/public_html
            name: openwisp-html-data
      volumes:
        - name: openwisp-media-data
          persistentVolumeClaim:
            claimName: media-pv-claim
        - name: openwisp-dashboard-static
          persistentVolumeClaim:
            claimName: static-pv-claim
        - name: openwisp-html-data
          persistentVolumeClaim:
            claimName: html-pv-claim
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openwisp-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openwisp-controller
    spec:
      restartPolicy: Always
      containers:
      - name: openwisp-controller
        image: openwisp/openwisp-controller:latest
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /opt/openwisp/static
            name: openwisp-controller-static
          - mountPath: /opt/openwisp/media
            name: openwisp-media-data
          - mountPath: /opt/openwisp/public_html
            name: openwisp-html-data
      volumes:
        - name: openwisp-media-data
          persistentVolumeClaim:
            claimName: media-pv-claim
        - name: openwisp-controller-static
          persistentVolumeClaim:
            claimName: static-pv-claim
        - name: openwisp-html-data
          persistentVolumeClaim:
            claimName: html-pv-claim
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openwisp-radius
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openwisp-radius
    spec:
      restartPolicy: Always
      containers:
      - name: openwisp-radius
        image: openwisp/openwisp-radius:latest
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /opt/openwisp/static
            name: openwisp-radius-static
          - mountPath: /opt/openwisp/public_html
            name: openwisp-html-data
      volumes:
        - name: openwisp-radius-static
          persistentVolumeClaim:
            claimName: static-pv-claim
        - name: openwisp-html-data
          persistentVolumeClaim:
            claimName: html-pv-claim
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openwisp-topology
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openwisp-topology
    spec:
      restartPolicy: Always
      containers:
      - name: openwisp-topology
        image: openwisp/openwisp-topology:latest
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /opt/openwisp/static
            name: openwisp-topology-static
          - mountPath: /opt/openwisp/public_html
            name: openwisp-html-data
      volumes:
        - name: openwisp-topology-static
          persistentVolumeClaim:
            claimName: static-pv-claim
        - name: openwisp-html-data
          persistentVolumeClaim:
            claimName: html-pv-claim
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openwisp-daphne
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openwisp-daphne
    spec:
      restartPolicy: Always
      containers:
        - name: openwisp-daphne
          image: openwisp/openwisp-websocket:latest
          args: ["/opt/openwisp/daphne.conf"]
          imagePullPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openwisp-websocket
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openwisp-websocket
    spec:
      restartPolicy: Always
      containers:
        - name: openwisp-websocket
          image: openwisp/openwisp-websocket:latest
          args: ["/opt/openwisp/worker.conf"]
          imagePullPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openwisp-nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openwisp-nginx
    spec:
      restartPolicy: Always
      containers:
      - name: openwisp-nginx
        image: openwisp/openwisp-nginx:latest
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /opt/openwisp/static
            name: openwisp-nginx-static
          - mountPath: /opt/openwisp/media
            name: openwisp-media-data
          - mountPath: /opt/openwisp/public_html
            name: openwisp-html-data
      volumes:
        - name: openwisp-nginx-static
          persistentVolumeClaim:
            claimName: static-pv-claim
        - name: openwisp-media-data
          persistentVolumeClaim:
            claimName: media-pv-claim
        - name: openwisp-html-data
          persistentVolumeClaim:
            claimName: html-pv-claim
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openwisp-postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openwisp-postgres
    spec:
      restartPolicy: Always
      containers:
        - name: openwisp-postgres
          image: mdillon/postgis:10-alpine
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: openwisp-postgres-data
      volumes:
        - name: openwisp-postgres-data
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openwisp-postfix
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openwisp-postfix
    spec:
      restartPolicy: Always
      containers:
        - name: openwisp-postfix
          image: openwisp/openwisp-postfix:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /etc/ssl/mail
              name: openwisp-postfix-data
      volumes:
        - name: openwisp-postfix-data
          persistentVolumeClaim:
            claimName: postfix-pv-claim
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openwisp-freeradius
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openwisp-freeradius
    spec:
      restartPolicy: Always
      containers:
        - name: openwisp-freeradius
          image: openwisp/openwisp-freeradius:latest
          imagePullPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openwisp-openvpn
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openwisp-openvpn
    spec:
      restartPolicy: Always
      containers:
        - name: openwisp-openvpn
          image: openwisp/openwisp-openvpn:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add: ["NET_ADMIN"]
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openwisp-celery
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: openwisp-celery
    spec:
      containers:
        - name: openwisp-celery
          image: openwisp/openwisp-dashboard:latest
          imagePullPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      restartPolicy: Always
      containers:
      - name: redis
        image: redis:alpine
        imagePullPolicy: Always
